# zkWasmi

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: main.rs
examples/wasm_file/: fibonacci.wat
src/: lib.rs
src/engine/: exec_context.rs  value_stack.rs
src/zk/: finite_field.rs  mod.rs  r1cs.rs  tracer.rs
